# proyecto_ML

./: README.md  main.py  pyproject.toml
entitis/: request_body.py  respose_body.py
model/: modelo_texto.pkl  use_model.py
routers/: return_text.py
util/: proces_pos.py  proces_text.py
