[tool.poetry]
name = "proyecto_mioti"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
flagembedding = "^1.2.10"
numpy = "1.26.0"
pandas = "^2.2.2"
language-tool-python = "^2.8"
scikit-learn = "^1.5.1"
fastapi = "^0.111.1"
catboost = "^1.2.5"
uvicorn = "^0.30.1"
nltk = "^3.8.1"
setuptools = "^71.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
